--- a/local/es/LC_MESSAGES/django.po
+++ b/local/es/LC_MESSAGES/django.po
@@ -412,10 +412,9 @@ msgid "Past Days"
 msgstr "Días Anteriores"
 
 #: sabyltimetracker/templates/tracker/dashboard.html:39
-#, fuzzy
 #| msgid "workers missing logs."
 msgid "Workers with logs"
-msgstr "trabajadores necesitan registros."
+msgstr "Trabajadores con registros"
 
 #: sabyltimetracker/templates/tracker/dashboard.html:56
 #: sabyltimetracker/templates/tracker/day_review.html:60
@@ -729,10 +728,8 @@ msgid "Monthly Reports"
 msgstr "Reportes Mensuales"
 
 #: tracker/admin.py:67
-#, fuzzy
-#| msgid "Daily Report"
 msgid "Daily Reports"
-msgstr "Reporte Diario"
+msgstr "Reportes Diarios"
 
 #: tracker/admin.py:123
 msgid "Union Assembly"
@@ -917,26 +914,20 @@ msgid "Daily_Report"
 msgstr "Reporte_Diario"
 
 #: tracker/models.py:31
-#, fuzzy
-#| msgid "Building"
 msgid "building"
-msgstr "Obra"
+msgstr "obra"
 
 #: tracker/models.py:32
-#, fuzzy
-#| msgid "Building"
 msgid "buildings"
-msgstr "Obra"
+msgstr "obras"
 
 #: tracker/models.py:34 tracker/models.py:483 tracker/models.py:522
 msgid "code"
-msgstr ""
+msgstr "código"
 
 #: tracker/models.py:35
-#, fuzzy
-#| msgid "E-mail Addresses"
 msgid "address"
-msgstr "Correos electrónicos"
+msgstr "dirección"
 
 #: tracker/models.py:71 tracker/models.py:301 tracker/models.py:309
 msgid "Daily Report"
@@ -995,46 +986,32 @@ msgid "Ad 1/2 Hour"
 msgstr "1/2 Hora Ad"
 
 #: tracker/models.py:192
-#, fuzzy
-#| msgid "Old workday"
 msgid "workday"
-msgstr "Día de trabajo anterior"
+msgstr "día de trabajo"
 
 #: tracker/models.py:193
-#, fuzzy
-#| msgid "Old workday"
 msgid "workdays"
-msgstr "Día de trabajo anterior"
+msgstr "días de trabajo"
 
 #: tracker/models.py:196
-#, fuzzy
-#| msgid "Update"
 msgid "date"
-msgstr "Actualizar"
+msgstr "fecha"
 
 #: tracker/models.py:197
-#, fuzzy
-#| msgid "Day unfinished."
 msgid "finished"
-msgstr "Día no finalizado."
+msgstr "finalizado"
 
 #: tracker/models.py:199 tracker/models.py:413
-#, fuzzy
-#| msgid "Comment"
 msgid "comment"
-msgstr "Comentario"
+msgstr "comentario"
 
 #: tracker/models.py:200
-#, fuzzy
-#| msgid "Day unfinished."
 msgid "force finished"
-msgstr "Día no finalizado."
+msgstr "finalizado forzosamente"
 
 #: tracker/models.py:201
-#, fuzzy
-#| msgid "Holiday"
 msgid "holiday"
-msgstr "Feriado"
+msgstr "feriado"
 
 #: tracker/models.py:312
 msgid "Date"
@@ -1073,22 +1050,16 @@ msgid "Notes"
 msgstr "Notas"
 
 #: tracker/models.py:405
-#, fuzzy
-#| msgid "Log hours"
 msgid "log hour"
-msgstr "Registrar horas"
+msgstr "registro de horas"
 
 #: tracker/models.py:406
-#, fuzzy
-#| msgid "Log hours"
 msgid "log hours"
-msgstr "Registrar horas"
+msgstr "registros de horas"
 
 #: tracker/models.py:411
-#, fuzzy
-#| msgid "Account"
 msgid "amount"
-msgstr "Cuenta"
+msgstr "cantidad"
 
 #: tracker/models.py:465
 msgid "of"
@@ -1099,16 +1070,12 @@ msgid "in task"
 msgstr "en tarea"
 
 #: tracker/models.py:480
-#, fuzzy
-#| msgid "in task"
 msgid "task"
-msgstr "en tarea"
+msgstr "tarea"
 
 #: tracker/models.py:481
-#, fuzzy
-#| msgid "Tasks"
 msgid "tasks"
-msgstr "Tareas"
+msgstr "tareas"
 
 #: tracker/models.py:484
 msgid "name"
@@ -1131,20 +1098,14 @@ msgid "whole day"
 msgstr "todo el día"
 
 #: tracker/models.py:490
-#, fuzzy
-#| msgid "Monthly Report"
 msgid "in monthly report"
 msgstr "en reporte mensual"
 
 #: tracker/models.py:519
-#, fuzzy
-#| msgid "Workers"
 msgid "worker"
 msgstr "trabajador"
 
 #: tracker/models.py:520
-#, fuzzy
-#| msgid "Workers"
 msgid "workers"
 msgstr "trabajadores"
 
